@@ -2,7 +2,8 @@ package controllers.iop.collaboration.impl;
 
 import be.objectify.deadbolt.java.actions.Group;
 import be.objectify.deadbolt.java.actions.Restrict;
-import io.ebean.Ebean;
+import io.ebean.DB;
+import io.ebean.Transaction;
 import io.ebean.text.PathProperties;
 import io.vavr.control.Either;
 import java.net.URL;
@@ -11,7 +12,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletionStage;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import javax.inject.Inject;
 import models.Exam;
 import models.ExamEnrolment;
@@ -19,7 +19,8 @@ import models.ExamExecutionType;
 import models.User;
 import models.json.CollaborativeExam;
 import org.joda.time.DateTime;
-import play.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import play.libs.ws.WSRequest;
 import play.libs.ws.WSResponse;
 import play.mvc.Http;
@@ -37,7 +38,7 @@ public class CollaborativeEnrolmentController extends CollaborationController {
         this.dateTimeHandler = dateTimeHandler;
     }
 
-    private static final Logger.ALogger logger = Logger.of(CollaborativeEnrolmentController.class);
+    private final Logger logger = LoggerFactory.getLogger(CollaborativeEnrolmentController.class);
 
     private boolean isEnrollable(Exam exam, String homeOrg) {
         if (exam.getOrganisations() != null) {
@@ -81,7 +82,7 @@ public class CollaborativeEnrolmentController extends CollaborationController {
                         .stream()
                         .map(e -> e.getKey().getExam(e.getValue()))
                         .filter(e -> isEnrollable(e, homeOrg))
-                        .collect(Collectors.toList());
+                        .toList();
 
                     return ok(
                         exams,
@@ -99,7 +100,7 @@ public class CollaborativeEnrolmentController extends CollaborationController {
     @Authenticated
     @Restrict({ @Group("STUDENT") })
     public CompletionStage<Result> checkIfEnrolled(Long id, Http.Request request) {
-        CollaborativeExam ce = Ebean.find(CollaborativeExam.class, id);
+        CollaborativeExam ce = DB.find(CollaborativeExam.class, id);
         if (ce == null) {
             return wrapAsPromise(notFound("sitnet_error_exam_not_found"));
         }
@@ -109,7 +110,7 @@ public class CollaborativeEnrolmentController extends CollaborationController {
                 checkExam(result.orElse(null), user)
                     .map(e -> {
                         DateTime now = dateTimeHandler.adjustDST(new DateTime());
-                        List<ExamEnrolment> enrolments = Ebean
+                        List<ExamEnrolment> enrolments = DB
                             .find(ExamEnrolment.class)
                             .where()
                             .eq("user", user)
@@ -143,7 +144,7 @@ public class CollaborativeEnrolmentController extends CollaborationController {
         List<ExamEnrolment> enrolmentsWithFutureReservations = enrolments
             .stream()
             .filter(ee -> ee.getReservation().toInterval().isAfter(now))
-            .collect(Collectors.toList());
+            .toList();
         if (enrolmentsWithFutureReservations.size() > 1) {
             logger.error(
                 "Several enrolments with future reservations found for user {} and collab exam {}",
@@ -163,12 +164,11 @@ public class CollaborativeEnrolmentController extends CollaborationController {
 
     private Result doCreateEnrolment(CollaborativeExam ce, User user) {
         // Begin manual transaction
-        Ebean.beginTransaction();
-        try {
+        try (Transaction tx = DB.beginTransaction()) {
             // Take pessimistic lock for user to prevent multiple enrolments creating.
-            Ebean.find(User.class).forUpdate().where().eq("id", user.getId()).findOne();
+            DB.find(User.class).forUpdate().where().eq("id", user.getId()).findOne();
 
-            List<ExamEnrolment> enrolments = Ebean
+            List<ExamEnrolment> enrolments = DB
                 .find(ExamEnrolment.class)
                 .fetch("reservation")
                 .where()
@@ -191,19 +191,16 @@ public class CollaborativeEnrolmentController extends CollaborationController {
             return handleFutureReservations(enrolments, user, ce)
                 .orElseGet(() -> {
                     ExamEnrolment newEnrolment = makeEnrolment(ce, user);
-                    Ebean.commitTransaction();
+                    tx.commit();
                     return ok(newEnrolment);
                 });
-        } finally {
-            // End transaction to release lock.
-            Ebean.endTransaction();
         }
     }
 
     @Authenticated
     @Restrict({ @Group("ADMIN"), @Group("STUDENT") })
     public CompletionStage<Result> createEnrolment(Long id, Http.Request request) {
-        CollaborativeExam ce = Ebean.find(CollaborativeExam.class, id);
+        CollaborativeExam ce = DB.find(CollaborativeExam.class, id);
         if (ce == null) {
             return wrapAsPromise(notFound("sitnet_error_exam_not_found"));
         }
